# reward-task-platform

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOY_GUIDE.md  DEPLOY_SERVER.md  Dockerfile  QUICK_START.md  README.md  STEP_BY_STEP_DEPLOY.md  deploy-server.sh  pyproject.toml  railway.json  requirements.txt  run_app.py  setup.py  start.py
backend/: .env.example  README.md  init_db_local.py  run.py
backend/app/: __init__.py  main.py
backend/app/api/: account.py  auth.py  notification.py  system.py  task.py  user.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/scripts/: init_db.py
frontend/: App.vue  index.html  manifest.json  package.json  pages.json  vercel.json  vite.config.js
frontend/api/: index.js
frontend/components/: IconLibrary.vue
frontend/config/: api.config.js
frontend/pages/index/: index.vue
frontend/pages/login/: login.vue  register.vue
frontend/pages/my/: balance.vue  index.vue  messages.vue  notifications.vue  password.vue  profile.vue  tasks.vue  transactions.vue  withdraw.vue
frontend/pages/task/: create.vue  detail.vue  list.vue  search.vue
frontend/static/: iconfont.js
frontend/static/css/: common.css  iconfont.css
frontend/utils/: crypto.js  http.js
